fix(YALB-1555): instead of using gap, add variable for JS calculation

--- a/components/02-molecules/tabs/_yds-tabs.scss
+++ b/components/02-molecules/tabs/_yds-tabs.scss
@@ -147,7 +147,8 @@ $component-tab-themes: map.deep-get(tokens.$tokens, 'component-themes');
   @include atoms.list-reset;
 
   display: flex;
-  gap: var(--size-spacing-1);
+  width: 100%;
+  max-width: 100%;
   overflow: auto;
   scroll-behavior: smooth;
   -ms-overflow-style: none; /* IE and Edge */
